adding docker-compose for spark | adding maven libraries | changing server port